--- a/style.css
+++ b/style.css
@@ -11,13 +11,19 @@ a {
 }
 
 .Header {
-    width: 100%;
     background-color: #fff;
     display: grid;
     height: 70px;
     unicode-bidi: isolate;
 }
 
+.Header--common {
+    box-shadow: 0px 15px 20px 0px rgba(0,0,0,.05)
+}
+
+.Header {
+    width: 100%;
+}
 
 @media screen and (max-width:1080px){
 .Header--common{   
@@ -25,9 +31,7 @@ a {
 }
 }
 
-.Header--common {
-    box-shadow: 0px 15px 20px 0px rgba(0,0,0,.05)
-}
+
 
 @media screen and (max-width: 767px){
 .Header{
@@ -44,18 +48,20 @@ a {
 }
 
 
-
-@media screen and (max-width: 767px){
-.HeaderContainer{
-    max-width: 100%;
-    margin: 0 16px;
-}
-}
-
 .HeaderContainer {
     display: flex;
     justify-content:space-between;
+    margin: 0 36px;
+    max-width: 100%;
     position: relative;
+}
+
+
+@media screen and (max-width: 767px){
+    .HeaderContainer{
+        max-width: 100%;
+        margin: 0 16px;
+}
 }
 
 .HeaderLogo {
@@ -394,8 +400,14 @@ main {
     unicode-bidi: isolate;
 }
 
+@media screen and (max-width: 1080px){
+    main {
+        padding-top: 60px;
+    }
+}
+
 @media screen and (max-width: 767px){
-    main{
+    main {
         padding-top: 52px;
 }
 }
@@ -407,7 +419,7 @@ main {
 
 @media screen and (max-width: 767px){
     .FirstView {
-        height:fit-content;    
+        height: fit-content;    
 }
 }
 
@@ -416,16 +428,17 @@ section{
     display: block;
     unicode-bidi: isolate;
 }
+.FirstView__bg-image {
+    position: absolute;
+    z-index: -1;
+}
 
 .FirstView__bg-image--left-rectangle {
     top: -70px;
     left: 0;
 }
 
-.FirstView__bg-image {
-    position: absolute;
-    z-index: -1;
-}
+
 
 
 @media screen and (max-width: 767px){
@@ -470,7 +483,7 @@ img{
     display: none;
 }
 
-@media screen and (max-width: 767px){
+@media screen and (max-width: 767px) {
 .FirstView__whole-image {
     display: block;
     margin-bottom: 7px;
@@ -478,28 +491,36 @@ img{
 }
 }
 
+
+
 .FirstView__container {
     max-width: 1040px;
-    margin-right: auto;
     margin-left: auto;
+    margin-right: auto;
     position: relative;
     padding-top: 219px;
 }
 
-@media  screen and (max-width: 767px){
-.FirstView_container{
-    padding-top: 0;
-    padding-bottom: 20px;
-    max-width: none;
-    padding-left: 16px;
-    padding-right: 16px;
+@media screen and (max-width: 1080px){
+    .FirstView__container {
+        max-width: none;
+        padding-left: 36px;
+        padding-right: 36px;
+    }
+    }
+
+
+@media screen and (max-width: 767px){
+    .FirstView__container {
+        padding-top: 0;
+        padding-bottom: 20px;
+        max-width: none;
+        padding-left: 16px;
+        padding-right: 16px;
 }
 }
 
-
-
-
-.FirstViewContent{
+.FirstViewContent {
     position: relative;
     width: fit-content;
 }
@@ -514,7 +535,7 @@ img{
 }
 
 @media screen and (max-width: 767px){
-.FirstViewContent__title{
+.FirstViewContent__title {
     font-size: 22px;
     line-height: 36px;
     position: relative;
@@ -523,7 +544,7 @@ img{
 }
 
 
-h2{
+h2 {
     display: block;
     margin-block-start: 0.83em;
     margin-block-end: 0.83em;
